--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body class="bg-slate-50 text-slate-800">
 <header class="bg-white shadow">
 <div class="max-w-7xl mx-auto px-6 py-4 flex justify-between items-center">
-<div class="text-xl font-bold">DOMAFI</div>
+<img src="logo.png" class="h-10 md:h-12" alt="Domafi">
 <nav class="space-x-6 text-sm">
 <a href="#vault">Vault</a>
 <a href="#borrow">Borrow</a>
@@ -22,7 +22,7 @@
 </header>
 <section class="max-w-7xl mx-auto px-6 py-24 text-center">
 <h1 class="text-5xl font-bold mb-4">The DomainFi Bank</h1>
-<p class="text-slate-600 mb-8">Store, stake, borrow and trade tokenized domains on Doma Network.</p>
+<p class="text-slate-600 mb-8">Store, stake, borrow and trade tokenized domains on Doma Network.</p> <p class="text-sm text-blue-500 mb-8">Built on Doma Protocol</p>
 <a href="#vault" class="bg-blue-600 text-white px-8 py-4 rounded-xl">Enter Domafi</a>
 </section>
 <section id="vault" class="max-w-7xl mx-auto px-6 py-16">
