--- a/index.html
+++ b/index.html
@@ -65,8 +65,7 @@ Advanced terminal for flipping and trading domain assets.</p>
 <script src="https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.min.js"></script>
 <script>
-const DOMAIN_CONTRACT = "0x0000000000000000000000000000000000000000"; // ganti nanti
-
+ // ganti nanticonst DOMAIN_CONTRACT = "0x1111111111111111111111111111111111111111";
 async function connectWallet() {
   if (!window.ethereum) return alert("Install Metamask");
 
