--- a/index.html
+++ b/index.html
@@ -63,9 +63,8 @@ Advanced terminal for flipping and trading domain assets.</p>
 </section>
 <footer class="text-center py-8 text-sm text-slate-500">© 2025 Domafi.xyz – DomainFi Bank</footer>
 <script src="https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.min.js"></script>
 <script>
- // ganti nanticonst DOMAIN_CONTRACT = "0x1111111111111111111111111111111111111111";
+const DOMAIN_CONTRACT = "0x1111111111111111111111111111111111111111";
 async function connectWallet() {
   if (!window.ethereum) return alert("Install Metamask");
 
