--- a/index.html
+++ b/index.html
@@ -47,25 +47,27 @@
 <h2 class="text-2xl font-bold mb-6">Stake Domains</h2>
 <p>Stake your domain tokens and earn protocol yield.</p>
 </section>
-<section id="trade" class="bg-white py-16">
-<div class="max-w-7xl mx-auto px-6">
-<h2 class="text-2xl font-bold mb-6">Trade Terminal</h2>
-<p><section id="mydomains" class="max-w-7xl mx-auto px-6 py-16">
-  <h2 class="text-2xl font-bold mb-4">My Domain Tokens</h2>
-  <div id="domainList" class="grid md:grid-cols-3 gap-6"></div>
-</section>
 Advanced terminal for flipping and trading domain assets.</p>
 </div>
 </section>
 <section id="launchpad" class="max-w-7xl mx-auto px-6 py-16">
 <h2 class="text-2xl font-bold mb-6">Domain Launchpad</h2>
-<p>Launch fractionalized premium domains to the community.</p>
+<p>Launch fract<section id="trade" class="bg-white py-16">
+  <div class="max-w-7xl mx-auto px-6">
+    <h2 class="text-2xl font-bold mb-6">Trade Terminal</h2>
+    <p>Advanced terminal for flipping and trading domain assets.</p>
+  </div>
+</section>
+<section id="mydomains" class="max-w-7xl mx-auto px-6 py-16">
+  <h2 class="text-2xl font-bold mb-4">My Domain Tokens</h2>
+  <div id="domainList" class="grid md:grid-cols-3 gap-6"></div>
+</section>
+ionalized premium domains to the community.</p>
 </section>
 <footer class="text-center py-8 text-sm text-slate-500">© 2025 Domafi.xyz – DomainFi Bank</footer>
 <script src="https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.min.js"></script>
 <script>
-const DOMAIN_CONTRACT = "0x1111111111111111111111111111111111111111";
-async function connectWallet() {
+document.getElementById("connectBtn").onclick = async () => {
   if (!window.ethereum) return alert("Install Metamask");
 
   const provider = new ethers.providers.Web3Provider(window.ethereum);
@@ -73,38 +75,15 @@ async function connectWallet() {
   const address = accounts[0];
 
   document.getElementById("walletAddress").innerText =
-    address.slice(0, 6) + "..." + address.slice(-4);
+    address.slice(0,6)+"..."+address.slice(-4);
   document.getElementById("connectBtn").innerText = "Connected";
 
-  await loadDomains(address, provider);
-}
-
-async function loadDomains(user, provider) {
-  const abi = [
-    "function balanceOf(address) view returns (uint256)",
-    "function tokenOfOwnerByIndex(address,uint256) view returns (uint256)",
-    "function tokenURI(uint256) view returns (string)"
-  ];
-
-  const contract = new ethers.Contract(DOMAIN_CONTRACT, abi, provider);
-  const count = await contract.balanceOf(user);
-
-  document.getElementById("domainList").innerHTML = "";
-
-  for (let i = 0; i < count; i++) {
-    const tokenId = await contract.tokenOfOwnerByIndex(user, i);
-    const uri = await contract.tokenURI(tokenId);
-    const name = uri.split("/").pop();
-
-    document.getElementById("domainList").innerHTML += `
-      <div class="bg-white p-4 rounded-xl shadow">
-        <b>${name}</b><br>
-        Token ID: ${tokenId}
-      </div>`;
-  }
-}
-
-document.getElementById("connectBtn").onclick = connectWallet;
+  document.getElementById("domainList").innerHTML = `
+    <div class="bg-white p-4 rounded-xl shadow">
+      Connected wallet detected.<br>
+      Domain NFTs will appear here.
+    </div>`;
+};
 </script>
 
 
