--- a/index.html
+++ b/index.html
@@ -52,18 +52,23 @@ Advanced terminal for flipping and trading domain assets.</p>
 </section>
 <section id="launchpad" class="max-w-7xl mx-auto px-6 py-16">
 <h2 class="text-2xl font-bold mb-6">Domain Launchpad</h2>
-<p>Launch fract<section id="trade" class="bg-white py-16">
-<div class="max-w-7xl mx-auto px-6">
-<h2 class="text-2xl font-bold mb-6">Trade Terminal</h2>
-<p>Advanced terminal for flipping and trading domain assets.</p>
-</div>
+<section id="trade" class="bg-white py-16">
+  <div class="max-w-7xl mx-auto px-6">
+    <h2 class="text-2xl font-bold mb-6">Trade Terminal</h2>
+    <p>Advanced terminal for flipping and trading domain assets.</p>
+  </div>
 </section>
+
 <section id="mydomains" class="max-w-7xl mx-auto px-6 py-16">
-<h2 class="text-2xl font-bold mb-4">My Domain Tokens</h2>
-<div id="domainList" class="grid md:grid-cols-3 gap-6"></div>
+  <h2 class="text-2xl font-bold mb-4">My Domain Tokens</h2>
+  <div id="domainList" class="grid md:grid-cols-3 gap-6"></div>
 </section>
-ionalized premium domains to the community.</p>
+
+<section id="launchpad" class="max-w-7xl mx-auto px-6 py-16">
+  <h2 class="text-2xl font-bold mb-6">Domain Launchpad</h2>
+  <p>Launch fractionalized premium domains to the community.</p>
 </section>
+
 <footer class="text-center py-8 text-sm text-slate-500">© 2025 Domafi.xyz – DomainFi Bank</footer>
 <script src="https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.min.js"></script>
 <script>
