--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@ Connect Wallet
 © 2025 Domafi.xyz – DomainFi Bank
 </footer>
 
-<script src="https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.min.js"></script>
+<script src="https://unpkg.com/ethers@5.7.2/dist/ethers.min.js"></script>
+
 
 <script>
 window.addEventListener("DOMContentLoaded", () => {
