--- a/index.html
+++ b/index.html
@@ -77,11 +77,14 @@ Connect Wallet
 © 2025 Domafi.xyz – DomainFi Bank
 </footer>
 
-<script src="https://unpkg.com/ethers@5.7.2/dist/ethers.min.js"></script>
-
+<script src="https://unpkg.com/ethers@5.7.2/dist/ethers.umd.min.js"></script>
 
 <script>
 window.addEventListener("DOMContentLoaded", () => {
+   ...
+});
+</script>
+
 
   const btn  = document.getElementById("connectBtn");
   const addr = document.getElementById("walletAddress");
