--- a/index.html
+++ b/index.html
@@ -24,7 +24,13 @@
 <button id="connectBtn" class="bg-blue-600 text-white px-4 py-2 rounded-xl">
 Connect Wallet
 </button>
+
+<button id="disconnectBtn" class="hidden bg-red-500 text-white px-4 py-2 rounded-xl ml-2">
+Disconnect
+</button>
+
 <span id="walletAddress" class="ml-3 text-xs text-slate-500"></span>
+
 </div>
 </header>
 
