--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@ Disconnect
 </section>
 
 <section id="vault" class="max-w-7xl mx-auto px-6 py-16">
+</section>
+
+<!-- === FAKE VAULT === -->
+<section id="fakeVault" class="max-w-7xl mx-auto px-6 py-16 hidden">
+  ... (fake vault code di atas)
+</section>
 <h2 class="text-2xl font-bold mb-6">Domain Vault</h2>
 <div class="grid md:grid-cols-3 gap-6">
 <div class="bg-white p-6 rounded-xl shadow">Deposit Domains<br>Earn yield</div>
