--- a/index.html
+++ b/index.html
@@ -44,44 +44,19 @@ Disconnect
 <a href="#vault" class="bg-blue-600 text-white px-8 py-4 rounded-xl">Enter Domafi</a>
 </section>
 
-<section id="vault" class="max-w-7xl mx-auto px-6 py-16">
-</section>
-
-<!-- === FAKE VAULT === -->
 <section id="fakeVault" class="max-w-7xl mx-auto px-6 py-16 hidden">
-  ... (fake vault code di atas)
-</section>
-<h2 class="text-2xl font-bold mb-6">Domain Vault</h2>
-<div class="grid md:grid-cols-3 gap-6">
-<div class="bg-white p-6 rounded-xl shadow">Deposit Domains<br>Earn yield</div>
-<div class="bg-white p-6 rounded-xl shadow">Secure On-chain Storage</div>
-<div class="bg-white p-6 rounded-xl shadow">Withdraw Anytime</div>
+<h2 class="text-2xl font-bold mb-6">My Vault</h2>
+
+<div class="grid md:grid-cols-3 gap-6 mb-8">
+  <div class="bg-white p-6 rounded-xl shadow">USDC Balance<br><b id="vaultUSDC"></b></div>
+  <div class="bg-white p-6 rounded-xl shadow">Borrowed<br><b id="vaultBorrowed"></b></div>
+  <div class="bg-white p-6 rounded-xl shadow">Domains<br><b id="vaultCount"></b></div>
 </div>
+
+<h3 class="font-bold mb-3">My Domains</h3>
+<div id="vaultDomains" class="grid md:grid-cols-3 gap-6"></div>
 </section>
 
-<section id="borrow" class="bg-white py-16">
-<div class="max-w-7xl mx-auto px-6">
-<h2 class="text-2xl font-bold mb-6">Borrow Against Domains</h2>
-<p>Use your domains as collateral to borrow USDC.</p>
-</div>
-</section>
-
-<section id="stake" class="max-w-7xl mx-auto px-6 py-16">
-<h2 class="text-2xl font-bold mb-6">Stake Domains</h2>
-<p>Stake your domain tokens and earn protocol yield.</p>
-</section>
-
-<section id="trade" class="bg-white py-16">
-<div class="max-w-7xl mx-auto px-6">
-<h2 class="text-2xl font-bold mb-6">Trade Terminal</h2>
-<p>Advanced terminal for flipping and trading domain assets.</p>
-</div>
-</section>
-
-<section id="mydomains" class="max-w-7xl mx-auto px-6 py-16">
-<h2 class="text-2xl font-bold mb-4">My Domain Tokens</h2>
-<div id="domainList" class="grid md:grid-cols-3 gap-6"></div>
-</section>
 
 <section id="launchpad" class="max-w-7xl mx-auto px-6 py-16">
 <h2 class="text-2xl font-bold mb-6">Domain Launchpad</h2>
@@ -162,6 +137,10 @@ document.addEventListener("DOMContentLoaded", () => {
       const provider = new ethers.providers.Web3Provider(window.ethereum);
       const accounts = await provider.send("eth_requestAccounts", []);
       setConnected(accounts[0]);
+renderVault();
+document.getElementById("vaultCount").innerText = VAULT.domains.length;
+document.getElementById("fakeVault").classList.remove("hidden");
+
     }catch(e){ alert("Wallet rejected"); }
   };
 
