--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ Disconnect
 <a href="#vault" class="bg-blue-600 text-white px-8 py-4 rounded-xl">Enter Domafi</a>
 </section>
 
-<section id="fakeVault" class="max-w-7xl mx-auto px-6 py-16 hidden">
+<section id="fakeVault" class="max-w-7xl mx-auto px-6 py-16">
 <h2 class="text-2xl font-bold mb-6">My Vault</h2>
 
 <div class="grid md:grid-cols-3 gap-6 mb-8">
